Create gh-pages branch via GitHub

--- a/index.html
+++ b/index.html
@@ -19,7 +19,9 @@
     </section>
 
     <section class="main-content">
-      <h1>
+      <p><img src="https://raw.githubusercontent.com/hiiamok/DISH/master/GUI.png" alt="GUI screenshot"></p>
+
+<h1>
 <a id="1-intro" class="anchor" href="#1-intro" aria-hidden="true"><span class="octicon octicon-link"></span></a>1. Intro</h1>
 
 <p>DISH consists of 2 different parts</p>
